# calen-do

./: .gitignore  Cargo.toml  bgshader.glsl  graphics.xcf
.github/workflows/: rust.yml
src/: date_util.rs  main.rs  ui.rs  user_data.rs
src/ui/: button.rs  color.rs  layout.rs  names.rs  render.rs
src/user_data/: ser.rs
