[package]
name = "calen-do"
version = "0.1.0"
authors = ["crumblingstatue <radiantstatue@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.11"
byteorder = "1.3.4"
directories = "2.0.2"
msgbox = "0.5.0"

[dependencies.sfml]
git = "https://github.com/jeremyletang/rust-sfml.git"
default-features = false
features = ["graphics"]
